--- a/abschlussvideo.html
+++ b/abschlussvideo.html
@@ -35,3 +35,60 @@ z.B.
 ```
 video-presentation-max-mustermann-2022-01-01.mp4
 ```
+
+
+### Niveaustufen
+
+Bewertung des Abschlussvideos
+
+Ein gelungenes Abschlussvideo vermittelt das Forschungsergebnis klar und verständlich und stellt die wichtigsten Erkenntnisse ansprechend dar. Wichtige Kriterien sind:
+
+Inhalt & Struktur: Klare Botschaft, logischer Aufbau, verständliche Darstellung der Kernaussagen.
+Präsentation & Verständlichkeit: Gute sprachliche und visuelle Aufbereitung, ansprechende und verständliche Erklärung.
+Kreativität & Engagement: Einfallsreiche Gestaltung, die das Interesse des Publikums weckt und motiviert, sich weiter mit dem Thema zu beschäftigen.
+Technische Qualität: Saubere Aufnahme, guter Ton, klare Bildgestaltung, sinnvolle Nutzung visueller Mittel.
+Relevanz & Zielgruppenorientierung: Die Präsentation ist ansprechend für die relevante Zielgruppe (Fachpublikum, Öffentlichkeit etc.).
+1. Bestes Abschlussvideo
+👉 (exzellent – informativ, ansprechend, professionell umgesetzt)
+
+✅ Inhalt & Struktur: Klare, prägnante Darstellung der Forschungsergebnisse mit logischem und spannenden Aufbau.
+✅ Präsentation & Verständlichkeit: Verständliche, gut strukturierte Erklärungen, professionell wirkende Darstellung.
+✅ Kreativität & Engagement: Einfallsreiche Gestaltung, die das Thema lebendig macht und neugierig auf mehr macht.
+✅ Technische Qualität: Hochwertige Aufnahme, exzellenter Ton, professioneller Schnitt und visuelle Gestaltung.
+✅ Relevanz & Zielgruppenorientierung: Perfekte Anpassung an die Zielgruppe, wissenschaftlich fundiert und dennoch verständlich.
+
+2. Gutes Abschlussvideo
+👉 (solide, klar verständlich, gut umgesetzt, aber mit kleineren Schwächen)
+
+✅ Inhalt & Struktur: Gute Vermittlung der Kernaussagen, leicht verständlich, aber nicht immer perfekt strukturiert.
+✅ Präsentation & Verständlichkeit: Klare Erklärung, gut vorbereitet, aber nicht durchgehend fesselnd oder spannend.
+✅ Kreativität & Engagement: Gelungene Gestaltung, aber ohne besondere Originalität oder visuelle Highlights.
+✅ Technische Qualität: Saubere Aufnahme, verständlicher Ton, aber kleine Mängel in Schnitt oder Bildqualität.
+✅ Relevanz & Zielgruppenorientierung: Gut angepasst an die Zielgruppe, aber nicht immer optimal ausbalanciert.
+
+3. Passables Abschlussvideo
+👉 (ausreichend verständlich, aber mit deutlichen Verbesserungspotenzialen)
+
+✅ Inhalt & Struktur: Das Thema wird behandelt, aber nicht immer klar oder gut strukturiert.
+✅ Präsentation & Verständlichkeit: Erklärungen verständlich, aber teilweise stockend oder unsicher.
+✅ Kreativität & Engagement: Standard-Präsentation ohne besondere visuelle oder kreative Ansätze.
+✅ Technische Qualität: Verständlicher Ton und brauchbares Bild, aber Schwächen in Qualität, Schnitt oder Licht.
+✅ Relevanz & Zielgruppenorientierung: Thema relevant, aber nicht optimal auf die Zielgruppe zugeschnitten.
+
+4. Akzeptables Abschlussvideo
+👉 (schwach strukturiert, schwer verständlich, technisch oder inhaltlich mangelhaft)
+
+✅ Inhalt & Struktur: Thema wird nur oberflächlich behandelt, rote Faden fehlt, wichtige Punkte unklar.
+✅ Präsentation & Verständlichkeit: Unsichere oder unstrukturierte Erklärung, schwer verständlich.
+✅ Kreativität & Engagement: Keine erkennbare kreative Gestaltung oder visuelle Unterstützung.
+✅ Technische Qualität: Schlechte Bild- oder Tonqualität, unruhige Kameraführung oder problematischer Schnitt.
+✅ Relevanz & Zielgruppenorientierung: Zielgruppe wird nicht wirklich erreicht, Video bleibt uninteressant oder unverständlich.
+
+5. Schlechtes Abschlussvideo
+👉 (mangelhaft – unverständlich, unstrukturiert, technisch unbrauchbar)
+
+✅ Inhalt & Struktur: Keine klare Aussage oder Struktur, unzusammenhängende oder verwirrende Präsentation.
+✅ Präsentation & Verständlichkeit: Vortrag schlecht vorbereitet, unverständlich oder fehlerhaft.
+✅ Kreativität & Engagement: Keine erkennbare Mühe in der Gestaltung, langweilig oder unpassend.
+✅ Technische Qualität: Sehr schlechte Bild- und Tonqualität, unprofessionell geschnitten oder unbearbeitet.
+✅ Relevanz & Zielgruppenorientierung: Kein erkennbarer Bezug zur Zielgruppe, Video verfehlt seinen Zweck.
