--- a/ausarbeitung.html
+++ b/ausarbeitung.html
@@ -26,3 +26,45 @@ Weitere Informationen und Hilfestellungen zum wissenschaftlichen Arbeiten finden
 
 
 
+### Niveaustufen
+
+1. Beste Ausarbeitung
+👉 (exzellent – wissenschaftlich fundiert, sprachlich präzise und hervorragend strukturiert)
+
+Grundlagen & Theorie: Exzellente, tiefgehende und reflektierte theoretische Auseinandersetzung mit dem Thema.
+Nachvollziehbarkeit & Argumentation: Sehr stringente Argumentation mit klaren, gut begründeten Aussagen.
+Gliederung & Struktur: Perfekt strukturierte Arbeit mit logischem, schlüssigem Aufbau und klarem roten Faden.
+Sprache & Ausdruck: Präzise, eloquent, wissenschaftlich korrekt und angenehm zu lesen.
+Formalitäten & Zitation: Fehlerfreie Zitation und Formatierung, perfektes wissenschaftliches Arbeiten.
+2. Gute Ausarbeitung
+👉 (gut strukturiert, verständlich, fundiert argumentiert)
+
+Grundlagen & Theorie: Tiefgehende, kritische Auseinandersetzung mit der Theorie und klarer Bezug zur Arbeit.
+Nachvollziehbarkeit & Argumentation: Schlüssige und gut begründete Argumentation ohne größere Lücken.
+Gliederung & Struktur: Stringente und klare Struktur, logisch aufeinander aufbauende Abschnitte.
+Sprache & Ausdruck: Gut lesbare, präzise und akademische Ausdrucksweise mit nur minimalen Schwächen.
+Formalitäten & Zitation: Sehr saubere Zitierweise, korrektes wissenschaftliches Arbeiten, konsistente Formatierung.
+3. Passable Ausarbeitung
+👉 (solide, aber mit Optimierungspotenzial in Tiefe und Klarheit)
+
+Grundlagen & Theorie: Gut recherchierte Basis, aber keine tiefgehende Auseinandersetzung mit dem Thema.
+Nachvollziehbarkeit & Argumentation: Logische Argumentationsstruktur, kleinere Ungenauigkeiten oder unzureichende Begründungen.
+Gliederung & Struktur: Klarer roter Faden, aber nicht durchgängig optimal aufgebaut oder gegliedert.
+Sprache & Ausdruck: Meistens präzise und verständlich, aber gelegentliche stilistische oder grammatikalische Schwächen.
+Formalitäten & Zitation: Weitgehend korrekte Zitation und Formatierung, kleinere Fehler oder Inkonsistenzen.
+4. Akzeptable Ausarbeitung
+👉 (grundlegende, aber fehlerhafte oder unzureichende Umsetzung)
+
+Grundlagen & Theorie: Erste theoretische Auseinandersetzung, aber noch oberflächlich oder mit Lücken.
+Nachvollziehbarkeit & Argumentation: Argumentation verständlich, aber mit Unstimmigkeiten oder schwacher Begründung.
+Gliederung & Struktur: Grundsätzlich erkennbarer Aufbau, aber teilweise unklar oder mit Sprüngen.
+Sprache & Ausdruck: Verständlich, aber mit stilistischen Schwächen oder häufiger unpräziser Ausdrucksweise.
+Formalitäten & Zitation: Zitierweise vorhanden, aber nicht konsistent oder fehlerhaft, grundlegende Formatierung eingehalten.
+5. Schlechte Ausarbeitung
+👉 (unvollständig, schlecht strukturiert, nicht nachvollziehbar)
+
+Grundlagen & Theorie: Kaum fundierte Auseinandersetzung mit dem Thema, fehlende oder oberflächliche Recherche, unklare oder falsche Theoriewahl.
+Nachvollziehbarkeit & Argumentation: Keine stringente Argumentation, Widersprüche oder fehlende Begründungen.
+Gliederung & Struktur: Chaotische oder unlogische Struktur, kein roter Faden, Themen werden ohne Zusammenhang behandelt.
+Sprache & Ausdruck: Sehr viele sprachliche Fehler, schlechte Lesbarkeit, unpräzise oder unverständliche Formulierungen.
+Formalitäten & Zitation: Fehlende oder inkonsistente Zitierweise, große Mängel bei Layout, Formatierung oder wissenschaftlichen Standards.
