--- a/bilddoku.html
+++ b/bilddoku.html
@@ -32,3 +32,70 @@ z.B.
 ```
 photo-log-max-mustermann-2022-01-01-01.png
 ```
+
+### Niveaustufen
+
+Bewertung der Bilddokumentation
+
+Eine gute Bilddokumentation sollte den Arbeits- und Forschungsprozess sichtbar machen, wichtige Aspekte nachvollziehbar erklären und ästhetisch ansprechend gestaltet sein. Wichtige Kriterien sind:
+
+Dokumentation des Arbeitsprozesses: Wichtige Schritte und Entscheidungen werden visuell festgehalten.
+Sinnvolle Bildauswahl: Die Bilder sind relevant, treffend und inhaltlich sinnvoll.
+Kontext & Erklärung: Bilder sind mit passenden Beschreibungen versehen, die ihr Verständnis erleichtern.
+Gestalterische Qualität: Bildkomposition, Beleuchtung und Perspektive sind gut gewählt.
+Struktur & Präsentation: Die Bilddokumentation ist übersichtlich, klar und ansprechend gestaltet.
+1. Beste Bilddokumentation
+
+👉 (exzellent – aussagekräftig, durchdacht, professionell gestaltet)
+
+✅ Dokumentation des Arbeitsprozesses: Lückenlose visuelle Begleitung des gesamten Projekts – von den ersten Ideen bis zum fertigen Ergebnis.
+✅ Sinnvolle Bildauswahl: Jedes Bild ist relevant, trägt zur Geschichte bei und ergänzt den Text sinnvoll.
+✅ Kontext & Erklärung: Präzise, informative Bildunterschriften, die das Bild in den Forschungsprozess einordnen.
+✅ Gestalterische Qualität: Hohe technische Qualität (scharf, gut ausgeleuchtet, durchdachte Perspektiven).
+✅ Struktur & Präsentation: Klare, intuitive Anordnung, ansprechendes Layout, angenehme visuelle Gestaltung.
+
+2. Gute Bilddokumentation
+
+👉 (solide, gut verständlich, mit kleineren Schwächen in Auswahl oder Gestaltung)
+
+✅ Dokumentation des Arbeitsprozesses: Relevante Schritte sind gut dokumentiert, aber nicht immer vollständig.
+✅ Sinnvolle Bildauswahl: Die meisten Bilder sind gut gewählt, einige könnten aber klarer oder prägnanter sein.
+✅ Kontext & Erklärung: Verständliche Erklärungen, aber nicht immer tiefgehend oder präzise formuliert.
+✅ Gestalterische Qualität: Gute Bildqualität, aber gelegentliche Schwächen in Schärfe, Beleuchtung oder Perspektive.
+✅ Struktur & Präsentation: Gut lesbar und sinnvoll angeordnet, aber nicht durchgehend optimal gestaltet.
+
+3. Passable Bilddokumentation
+
+👉 (ausreichend, aber mit Verbesserungspotenzial in Struktur, Qualität oder Kontext)
+
+✅ Dokumentation des Arbeitsprozesses: Wichtige Schritte sind vorhanden, aber es gibt erkennbare Lücken.
+✅ Sinnvolle Bildauswahl: Einige Bilder sind relevant, andere wirken überflüssig oder unklar.
+✅ Kontext & Erklärung: Bildunterschriften vorhanden, aber teilweise ungenau oder wenig erklärend.
+✅ Gestalterische Qualität: Mittelmäßige Bildqualität (leichte Unschärfen, schlechte Beleuchtung, unruhige Komposition).
+✅ Struktur & Präsentation: Die Anordnung ist verständlich, aber nicht optimal strukturiert oder gestaltet.
+
+4. Akzeptable Bilddokumentation
+
+👉 (lückenhaft, wenig durchdacht, technisch oder inhaltlich schwach, aber grundlegende Inhalte vorhanden)
+
+✅ Dokumentation des Arbeitsprozesses: Nur wenige oder zufällig gewählte Bilder, keine durchgängige visuelle Begleitung.
+✅ Sinnvolle Bildauswahl: Einige Bilder sind unpassend oder bieten keinen Mehrwert.
+✅ Kontext & Erklärung: Bildunterschriften fehlen oder sind so knapp, dass der Kontext unklar bleibt.
+✅ Gestalterische Qualität: Mehrere Bilder sind unscharf, verwackelt, schlecht ausgeleuchtet oder ungünstig komponiert.
+✅ Struktur & Präsentation: Die Bilder sind unübersichtlich angeordnet oder wirken willkürlich zusammengestellt.
+
+5. Schlechte Bilddokumentation
+
+👉 (mangelhaft – unvollständig, unverständlich, visuell oder inhaltlich unbrauchbar)
+
+✅ Dokumentation des Arbeitsprozesses: Kaum oder keine visuelle Begleitung des Projekts, wichtige Schritte fehlen.
+✅ Sinnvolle Bildauswahl: Bilder sind irrelevant, unpassend oder nicht aussagekräftig.
+✅ Kontext & Erklärung: Keine oder völlig unzureichende Beschriftungen, Bilder bleiben ohne Bedeutung.
+✅ Gestalterische Qualität: Sehr schlechte Bildqualität (unscharf, überbelichtet, verwackelt, unbrauchbare Perspektiven).
+✅ Struktur & Präsentation: Chaotisch, unübersichtlich, unprofessionell aufbereitet.
+
+Fazit:
+
+Eine gute Bilddokumentation erzählt eine visuelle Geschichte des Forschungs- und Arbeitsprozesses. Sie ist gut strukturiert, visuell ansprechend und inhaltlich relevant.
+
+Bilder sind keine Dekoration – sie müssen Informationen vermitteln und den Forschungsprozess unterstützen!
