--- a/werk.html
+++ b/werk.html
@@ -21,3 +21,47 @@ title: Das Werk
 - Erstellen Sie eine aussagekräftige Readme-Datei im Repository. Diese sollte eine Kurzbeschreibung des Werks, Installationsanweisungen, Lizenz, Kontext des Werks, Nutzungshinweise und Kontaktinformationen enthalten.
 - Verfassen Sie eine prägnante Benutzerdokumentation, die alle wichtigen Funktionen und Nutzungsszenarien beschreibt. Diese kann auch Screenshots, Tutorials oder Videos enthalten.
 - Dokumentieren Sie den Code und die Architektur des Werks, sodass andere Entwickler das Projekt verstehen und weiterentwickeln können.
+
+
+#### Niveaustufen:
+
+1. Schlechte Lösung
+👉 (schwach in allen Dimensionen, keine erkennbare Substanz)
+
+Werk (Was wurde geschaffen?): Das Ergebnis ist unbrauchbar oder unvollständig. Keine klare Problemstellung, geringe oder keine Relevanz.
+Erkenntnis (Welches Wissen wurde generiert?): Kaum oder keine fundierte Recherche, oberflächliche Auseinandersetzung mit dem Thema.
+Rückbindung (Wie ist es in den Kontext eingebettet?): Keine erkennbare Praxisrelevanz oder wissenschaftliche Verankerung.
+Können (Welche Fähigkeiten wurden demonstriert?): Grundlegende methodische, analytische oder technische Fehler, mangelnde Eigenständigkeit.
+Vermittlung (Wie wird es präsentiert?): Unklare, fehlerhafte oder schwer verständliche Darstellung, schwache Argumentation.
+2. Akzeptable Lösung
+👉 (grundlegende, aber fehlerhafte oder unzureichende Umsetzung)
+
+Werk: Einfache, aber funktionierende Lösung ohne größere Innovationskraft oder Tiefe.
+Erkenntnis: Erste Auseinandersetzung mit dem Thema, aber lückenhafte oder oberflächliche Recherche.
+Rückbindung: Relevanz für eine Zielgruppe erkennbar, aber Praxisbezug und wissenschaftlicher Kontext bleiben vage.
+Können: Einige methodische Fehler oder Unsicherheiten, fehlende Tiefe in der Problemlösung.
+Vermittlung: Verständlich, aber sprachlich und formal mit Schwächen, unstrukturierte Darstellung.
+3. Passable Lösung
+👉 (solide, aber ohne besonderen Tiefgang oder Mehrwert)
+
+Werk: Sinnvolles, aber nicht herausragendes Ergebnis mit erkennbarer Zielsetzung.
+Erkenntnis: Angemessene Recherche mit fundierter, aber nicht sehr tiefer Analyse.
+Rückbindung: Relevanz und Kontext gut erkennbar, aber nicht durchgängig überzeugend eingebunden.
+Können: Methodisch sauber, aber mit Optimierungspotenzial in Entscheidungsfindung oder Umsetzung.
+Vermittlung: Klar strukturiert und verständlich, aber nicht durchgehend präzise oder eloquent.
+4. Gute Lösung
+👉 (durchdacht, mit erkennbarem Mehrwert für Praxis oder Wissenschaft)
+
+Werk: Eine durchdachte und gut begründete Lösung mit erkennbarem Innovationspotenzial.
+Erkenntnis: Fundierte, kritische und breit angelegte Recherche mit analytischer Tiefe.
+Rückbindung: Klare Relevanz und Einbindung in den wissenschaftlichen oder praktischen Kontext.
+Können: Hohe Eigenständigkeit, kompetente methodische Umsetzung, stringente Lösungsstrategie.
+Vermittlung: Verständlich, präzise und überzeugend präsentiert, gute Argumentation.
+5. Beste Lösung
+👉 (exzellent, innovativ und klar strukturiert – wissenschaftlich oder praktisch bedeutend)
+
+Werk: Herausragendes Ergebnis mit innovativen oder neuen Erkenntnissen.
+Erkenntnis: Tiefgehende, reflektierte und umfassende Auseinandersetzung mit dem Thema.
+Rückbindung: Exzellente Verknüpfung mit relevanten wissenschaftlichen und praktischen Kontexten.
+Können: Sehr hohe Eigenständigkeit, methodische Exzellenz, reflektierte Entscheidungen.
+Vermittlung: Präzise, sprachlich exzellent und überzeugend, ohne inhaltliche oder formale Schwächen.
